--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Honk&family=Nabla&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
+        <script src="script.js"></script>
     </head>
 
+  
+
     <body>
-        <script src="script.js"></script>
+      
+     
 
     </body>
 </html>
